--- a/.github/workflows/master_dental-office-assistant-webapp.yml
+++ b/.github/workflows/master_dental-office-assistant-webapp.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy Node.js app to Azure Web App - dental-office-assistant-webapp
+name: Build and deploy Node.js app to Azure Web App - dental-office-assistant- scheduler webapp
 
 on:
   push:
@@ -31,7 +31,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: .
+          path: ./starter/ContosoDentistryScheduler
 
   deploy:
     runs-on: ubuntu-latest
