--- a/.github/workflows/master_dental-office-assistant-jeffry-appservice.yml
+++ b/.github/workflows/master_dental-office-assistant-jeffry-appservice.yml
@@ -23,6 +23,7 @@ jobs:
 
       - name: npm install, build, and test
         run: |
+          cd starter/ContosoDentistryChatBot
           npm install
           npm run build --if-present
           npm run test --if-present
@@ -31,7 +32,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: ./starter/ContosoDentistryChatBot
+          path: .
 
   deploy:
     runs-on: ubuntu-latest
