--- a/.github/workflows/master_dental-office-assistant-jeffry-appservice.yml
+++ b/.github/workflows/master_dental-office-assistant-jeffry-appservice.yml
@@ -22,8 +22,8 @@ jobs:
           node-version: '16.x'
 
       - name: npm install, build, and test
+        working-directory: starter/ContosoDentistryChatBot/
         run: |
-          cd starter/ContosoDentistryChatBot
           npm install
           npm run build --if-present
           npm run test --if-present
@@ -32,7 +32,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: .
+          path: starter/ContosoDentistryChatBot/
 
   deploy:
     runs-on: ubuntu-latest
