--- a/.github/workflows/master_dental-office-assistant-webapp.yml
+++ b/.github/workflows/master_dental-office-assistant-webapp.yml
@@ -7,6 +7,8 @@ on:
   push:
     branches:
       - master
+    paths:
+      - starter/ContosoDentistryScheduler/**
   workflow_dispatch:
 
 jobs:
@@ -22,8 +24,8 @@ jobs:
           node-version: '16.x'
 
       - name: npm install, build, and test
+        working-directory: starter/ContosoDentistryScheduler/
         run: |
-          cd starter/ContosoDentistryScheduler
           npm install
           npm run build --if-present
           npm run test --if-present
@@ -32,7 +34,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: .
+          path: starter/ContosoDentistryScheduler/
 
   deploy:
     runs-on: ubuntu-latest
